--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>p2p_cache</module>
         <module>p2p_domain</module>
         <module>p2p_home</module>
+        <module>p2p_jms</module>
     </modules>
 
     <packaging>pom</packaging>
